--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
     "moduleResolution": "node",
     "jsx": "preserve",
     "baseUrl": "./",
-    /* paths - import rewriting/resolving */
     "paths": {
       // If you configured any Snowpack aliases, add them here.
       // Add this line to get types for streaming imports (packageOptions.source="remote"):
@@ -14,7 +13,7 @@
       // More info: https://www.snowpack.dev/guides/streaming-imports
     },
     "allowSyntheticDefaultImports": true,
-    "importsNotUsedAsValues": "error",
+    // "importsNotUsedAsValues": "error",
     /* more strict checking for errors that per-file transpilers like `esbuild` would crash */
     "isolatedModules": true,
     /* noEmit - We only use TypeScript for type checking. */
